Add fire strategy

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,6 +1,8 @@
 # tank
 tank.count.init=10
 tank.speed=5
+tank.good.fire.strategy.class.name=com.my.project.FourDirFireStrategy
+tank.bad.fire.strategy.class.name=com.my.project.DefaultFireStrategy
 bullet.speed=10
 game.width=1080
 game.height=720
